--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,10 +18,10 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/enter_desc_txt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="32dp"
-        android:gravity="center"
+        android:layout_margin="16dp"
+        android:gravity="start"
         android:text="@string/txt_enter_desc"
         app:layout_constraintBottom_toTopOf="@+id/mobile_edtl"
         app:layout_constraintEnd_toEndOf="parent"
