--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#FF8E8E</color>
-    <color name="orange">#FFB74C</color>
-    <color name="green">#C2FF7B</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FFC107</color>
+    <color name="green">#62B402</color>
 </resources>
