--- a/app/src/main/res/layout/fragment_observers.xml
+++ b/app/src/main/res/layout/fragment_observers.xml
@@ -93,7 +93,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#B3BFBFBF"
