--- a/app/src/main/res/values/permission_types_array.xml
+++ b/app/src/main/res/values/permission_types_array.xml
@@ -2,11 +2,11 @@
 <resources>
     <string-array name="location">
         <item>Select the location sending interval</item>
-        <item>As soon as the location changes</item>
+        <item>Every 5 seconds</item>
         <item>Every 5 minutes</item>
         <item>Every 30 minutes</item>
-        <item>Every 1 hours</item>
+        <item>Every 1 hour</item>
         <item>Every 3 hours</item>
-        <item>Every 1 days</item>
+        <item>Every 1 day</item>
     </string-array>
 </resources>
