--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="red">#FF0000</color>
     <color name="orange">#FFC107</color>
     <color name="green">#62B402</color>
+    <color name="disable">#C1C1C1</color>
 </resources>
